--- a/index.html
+++ b/index.html
@@ -1,20 +1,91 @@
-<meta charset="UTF-8" />
-<style>
-    .false-anchor {
-        cursor: pointer;
-        text-decoration: underline;
-        color:rgb(0, 0, 238) !important;
-    }
-    .false-anchor:hover {
-        color:rgb(0, 0, 131) !important;
-    }
-</style>
-<!-- <a id="fileThatWorks" class="false-anchor">KTLX20130520_200356_V06.gz</a>
-<br>
-<a id="fileThatDoesnt" class="false-anchor">KLWX20220623_014344_V06</a>
-<br> -->
-<input id="fileInput" type="file"/>
-<br><br><br>
-<canvas id="theCanvas"></canvas>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="./dist/bundle.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>NexradJS</title>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            position: absolute;
+            bottom: 0;
+            height: 85%;
+            width: 100%;
+        }
+        .false-anchor {
+            cursor: pointer;
+            text-decoration: underline;
+            color:rgb(0, 0, 238) !important;
+        }
+        .false-anchor:hover {
+            color:rgb(0, 0, 131) !important;
+        }
+    </style>
+</head>
+<body>
+    <div id="fileStation" style="display: none"></div>
+    <!-- <a id="fileThatWorks" class="false-anchor">KTLX20130520_200356_V06.gz</a>
+    <br>
+    <a id="fileThatDoesnt" class="false-anchor">KLWX20220623_014344_V06</a>
+    <br> -->
+    <input id="fileInput" type="file"/>
+    <div id="messageDisplay"></div>
+    <br><br><br>
+    <canvas id="theCanvas" style="display: none"></canvas>
+    <script src="utils.js"></script>
+    <script src="./dist/bundle.js"></script>
+    <div id="map"></div>
+
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1Ijoic3RlZXBhdHRpY3N0YWlycyIsImEiOiJjbDNvaGFod2EwbXluM2pwZTJiMDYzYjh5In0.J_HeH00ry0tbLmGmTy4z5w';
+        const map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/bright-v9',
+            zoom: 3,
+            center: [-98.5606744, 36.8281576],
+            projection: 'equirectangular',
+        });
+
+        // radius of wsr-88d scan in km
+        var radius = 460;
+        $('#fileStation').on('DOMSubtreeModified', function() {
+            var station = document.getElementById('fileStation').innerHTML;
+            $.getJSON('https://steepatticstairs.github.io/weather/json/radarStations.json', function(data) {
+                var stationLat = data[station][1];
+                var stationLng = data[station][2];
+                var stationBbox = getBoundingBox(stationLat, stationLng, radius);
+
+                var coord1 = stationBbox.minLat;
+                var coord2 = stationBbox.minLng;
+                var coord3 = stationBbox.maxLat;
+                var coord4 = stationBbox.maxLng;
+                map.addLayer({
+                    id: 'canvas-layer',
+                    type: 'raster',
+                    source: {
+                        type: 'canvas',
+                        canvas: 'theCanvas',
+                        coordinates: [
+                            [coord2, coord3],
+                            [coord4, coord3],
+                            [coord4, coord1],
+                            [coord2, coord1]
+                        ],
+                    }
+                });
+                //new mapboxgl.Marker()
+                //    .setLngLat([stationLng, stationLat])
+                //    .addTo(map);
+            });
+        });
+    </script>
+</body>
+</html>
