--- a/index.html
+++ b/index.html
@@ -28,9 +28,56 @@
         .false-anchor:hover {
             color:rgb(0, 0, 131) !important;
         }
+
+        #spinnerParent {
+            z-index: 10;
+            margin: 0;
+            padding: 0;
+            position: absolute;
+            bottom: 0;
+            height: 100%;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.2);
+        }
+        .spinner {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            height:60px;
+            width:60px;
+            margin:0px auto;
+            -webkit-animation: rotation .6s infinite linear;
+            -moz-animation: rotation .6s infinite linear;
+            -o-animation: rotation .6s infinite linear;
+            animation: rotation .6s infinite linear;
+            border-left:6px solid rgba(0,174,239,.15);
+            border-right:6px solid rgba(0,174,239,.15);
+            border-bottom:6px solid rgba(0,174,239,.15);
+            border-top:6px solid rgba(0,174,239,.8);
+            border-radius:100%;
+        }
+        @-webkit-keyframes rotation {
+            from {-webkit-transform: rotate(0deg);}
+            to {-webkit-transform: rotate(359deg);}
+        }
+        @-moz-keyframes rotation {
+            from {-moz-transform: rotate(0deg);}
+            to {-moz-transform: rotate(359deg);}
+        }
+        @-o-keyframes rotation {
+            from {-o-transform: rotate(0deg);}
+            to {-o-transform: rotate(359deg);}
+        }
+        @keyframes rotation {
+            from {transform: rotate(0deg);}
+            to {transform: rotate(359deg);}
+        }
     </style>
 </head>
 <body>
+    <div id="spinnerParent" style="display: none">
+        <div class="spinner"></div>
+    </div>
     <div id="fileStation" style="display: none"></div>
     <!-- <a id="fileThatWorks" class="false-anchor">KTLX20130520_200356_V06.gz</a>
     <br>
