added dpi control for the user

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     <a id="fileThatDoesnt" class="false-anchor">KLWX20220623_014344_V06</a>
     <br> -->
     <input id="fileInput" type="file"/>
+    <br>
+    <label><b>DPI:</b></label>
+    <input id="userDPI" value="96" type="text" style="width: 30px">
     <div id="messageDisplay"></div>
     <br><br><br>
     <canvas id="theCanvas" style="display: none"></canvas>
