--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="spinner"></div>
     </div>
     <div id="fileStation" style="display: none"></div>
+    <div id="decodedRadarDataURL" style="display: none"></div>
     <!-- <a id="fileThatWorks" class="false-anchor">KTLX20130520_200356_V06.gz</a>
     <br>
     <a id="fileThatDoesnt" class="false-anchor">KLWX20220623_014344_V06</a>
@@ -87,6 +88,8 @@
     <br>
     <label><b>DPI:</b></label>
     <input id="userDPI" value="96" type="text" style="width: 30px">
+    <button id="plotRef" style="display: none">Ref</button>
+    <button id="plotVel" style="display: none">Vel</button>
     <div id="messageDisplay"></div>
     <br><br><br>
     <canvas id="theCanvas" style="display: none"></canvas>
