--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script&display=swap" rel="stylesheet">
 
     <style>
         body {
@@ -95,7 +96,41 @@
     <canvas id="theCanvas" style="display: none"></canvas>
     <script src="utils.js"></script>
     <script src="./dist/bundle.js"></script>
+
     <div id="map"></div>
+
+    <!-- <canvas id="texturecolorbar" class="texturecolorbar"></canvas>
+    <script type="x-shader/x-vertex" id="vertexShader">
+        //x: azimuth
+        //y: range
+        //z: value
+        attribute vec2 aPosition;
+        attribute float aColor;
+        uniform mat4 u_matrix;
+        varying float color;
+
+        void main() {
+            color = aColor;
+            gl_Position = u_matrix * vec4(aPosition.x,aPosition.y,0.0,1.0);
+        }
+    </script>
+    <script type="x-shader/x-fragment" id="fragmentShader">
+        precision mediump float;
+        varying float color;
+        uniform sampler2D u_texture;
+        void main() {
+            //gl_FragColor = vec4(0.0,color/60.0,0.0,1.0);
+            float calcolor = (color)/(70.0);
+            gl_FragColor = texture2D(u_texture,vec2(min(max(calcolor,0.0),1.0),0.0));
+            //gl_FragColor = vec4(1.0,0.0,0.0,1.0);
+        }
+    </script>
+    <script>
+        //$.getJSON('./data/radar/KAMA_sub.json', function(data) {
+        //  console.log(data);
+        //})
+    </script>
+    <script src="polygonTest/demo-radar-script.js"></script> -->
 
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoic3RlZXBhdHRpY3N0YWlycyIsImEiOiJjbDNvaGFod2EwbXluM2pwZTJiMDYzYjh5In0.J_HeH00ry0tbLmGmTy4z5w';
