added date display

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
                         <input id="fileInput" type="file"/>
                         <div id='radarInfoDiv' style='display: none'>
                             <br>
+                            <div id='radDateParent' style='display: none'><b>Date: </b><a id='radDate'></a></div>
+                            <br>
                             <div id='radStationParent' style='display: none'><b>Station: </b><a id='radStation'></a></div>
                             <br>
                             <div id='radVCPParent' style='display: none'><b>VCP: </b><a id='radVCP'></a></div>
