--- a/index.html
+++ b/index.html
@@ -218,12 +218,10 @@
                     '>
                         <input id="fileInput" type="file"/>
                         <div id='radarInfoDiv' style='display: none'>
-                            <br>
-                            <div id='radDateParent' style='display: none'><b>Date: </b><a id='radDate'></a></div>
-                            <br>
-                            <div id='radStationParent' style='display: none'><b>Station: </b><a id='radStation'></a></div>
-                            <br>
-                            <div id='radVCPParent' style='display: none'><b>VCP: </b><a id='radVCP'></a></div>
+                            <div id='radFileNameParent'><b><a id='radFileName'></a></b></div>
+                            <div id='radDateParent'><b>Date: </b><a id='radDate'></a></div>
+                            <b>Station: </b><a id='radStation'></a>
+                            <b>VCP: </b><a id='radVCP'></a>
                         </div>
                     </div>`
                 this._container.addEventListener('click', function() {
