fixed up non hi-res data and added a checkbox to toggle filtering low values

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
             <option value="3">3</option>
             <option value="17">17</option> -->
         </select>
+        <br><br>
+        <input type="checkbox" id="shouldLowFilter">
+        <label for="shouldLowFilter">Low Filter</label>
     </div>
 
     <div id="map"></div>
