finally added velocity data plotting

--- a/index.html
+++ b/index.html
@@ -129,16 +129,24 @@
     <canvas id="texturecolorbar" class="texturecolorbar" style="display: none"></canvas>
 
     <div id="settingsDialog" style="display: none">
-        <div><b>Elevation:</b></div>
-        <select id="elevInput">
-            <!-- <option value="1" selected>1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="17">17</option> -->
+        <div id="extraStuff">
+            <div><b>Elevation:</b></div>
+            <select id="elevInput">
+                <!-- <option value="1" selected>1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="17">17</option> -->
+            </select>
+            <br><br>
+            <input type="checkbox" id="shouldLowFilter">
+            <label for="shouldLowFilter">Low Filter</label>
+            <br><br>
+        </div>
+        <div><b>Product:</b></div>
+        <select id="productInput">
+            <option value="REF" selected>Reflectivity</option>
+            <option value="VEL">Velocity</option>
         </select>
-        <br><br>
-        <input type="checkbox" id="shouldLowFilter">
-        <label for="shouldLowFilter">Low Filter</label>
     </div>
 
     <div id="map"></div>
