--- a/gradientTest.html
+++ b/gradientTest.html
@@ -51,68 +51,41 @@
 -->
 
 <script>
-    var colors = {"refc0":[
-        'rgb(0, 0, 0)',
+    var colors = {"refc0":[]}
+    colors["refc0"].push(
+      //"#ffffff",
+      //"#FC52FF",
+      //"#871FFF",
+      //"#0011CC",
+      //"#0088CC",
+      "#B3F0FF",
 
-        'rgb(67, 97, 162)',
-        'rgb(106, 208, 228)',
+      "#42FF42",
+      "#009402",
+      "#A3A3A3",
+      "#8A0000",
+      "#FF5269",
 
-        'rgb(111, 214, 232)',
-        'rgb(53, 213, 91)',
-
-        'rgb(17, 213, 24)',
-        'rgb(9, 94, 9)',
-
-        'rgb(29, 104, 9)',
-        'rgb(234, 210, 4)',
-
-        'rgb(255, 226, 0)',
-        'rgb(255, 128, 0)',
-
-        'rgb(255, 0, 0)',
-        'rgb(113, 0, 0)',
-
-        'rgb(255, 255, 255)',
-        'rgb(255, 146, 255)',
-
-        'rgb(255, 117, 255)',
-        'rgb(225, 11, 227)',
-
-        'rgb(178, 0, 255)',
-        'rgb(99, 0, 214)',
-
-        'rgb(5, 236, 240)',
-        'rgb(1, 32, 32)',
-
-        'rgb(1, 32, 32)',
-
-        'rgb(1, 32, 32)',
-    ]}
+      "#FFB3E0",
+      //"#FFF1C2",
+      //"#FF9214",
+      //"#B85C00",
+      //"#572100",
+      //"#000000"
+    )
     var values = {"refc0":[
-        0,
-        10, 18,
-        18, 22,
-        22, 35,
-        35, 40,
-        40, 50,
-        50, 60,
-        60, 65,
-        65, 70,
-        70, 75,
-        75, 85,
-        85,
-        95,
+      -50, -30, -10, 0, 10, 20, 50
     ]}
     var colors=colors["refc0"];
     var levs=values["refc0"];
     var colortcanvas=document.getElementById("grad");
-    colortcanvas.width=1250;
+    colortcanvas.width=250;
     colortcanvas.height=50;
     var ctxt = colortcanvas.getContext('2d');
     ctxt.clearRect(0,0,colortcanvas.width,colortcanvas.height); 
     var grdt=ctxt.createLinearGradient(0,0,colortcanvas.width,0);
-    var cmax=95;
-    var cmin=-30;
+    var cmax=50;
+    var cmin=-50;
     var clen=colors.length;
 
     for (var i=0;i<clen;++i) {
