added start of web workers so data parsing doesnt freeze the UI

--- a/index.html
+++ b/index.html
@@ -587,5 +587,6 @@
     <script src="utils.js"></script>
     <script src="./dist/bundle.js"></script>
     <script src="./polygonTest/demo-radar-script.js"></script>
+    <script src="./polygonTest/generateVerticesRadarDemo.js"></script>
 </body>
 </html>
